--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -1,12 +1,7 @@
 <html>
 	<body>
 		<h1> Relatório lab 1 </h1>
-		<p>Este relatório descreve a atividade realizada com o objetivo de iniciar os trabalhos no Ubuntu com o OpenCV, uma biblioteca utilizada para processamento de imagens e vídeos. A atividade consistiu em explorar comandos básicos para visualização e gravação de imagens e vídeos, assim como realizar alterações nos programas fornecidos.
-O relatório está organizado em três partes principais. Na primeira parte, foi realizada a preparação do ambiente de trabalho, seguindo as instruções fornecidas no Moodle e baixando os arquivos do Lab1 - Parte 1.
-Na segunda parte, focamos no processamento básico de imagens e vídeos. Foram disponibilizados quatro programas, nos quais estudamos diferentes operações e realizamos alterações solicitadas. Isso incluiu a leitura de imagens e vídeos a partir de arquivos, ajuste de velocidade de exibição, leitura de imagens da câmera e gravação de vídeos da câmera.
-A terceira parte envolveu a obtenção de fotos e vídeos com a webcam, utilizando os programas corrigidos da parte anterior. Foi solicitado que capturássemos uma foto geral do grupo, realizássemos uma montagem de avatares individuais e gravássemos vídeos com diferentes tipos de movimento.
-Ao longo deste relatório, serão apresentados os programas elaborados pela equipe para cada etapa, descrevendo as alterações realizadas e as soluções adotadas.
-</p>	
+		<p>Este relatório descreve a atividade realizada com o objetivo de iniciar os trabalhos no Ubuntu com o OpenCV, uma biblioteca utilizada para processamento de imagens e vídeos. A atividade consistiu em explorar comandos básicos para visualização e gravação de imagens e vídeos, assim como realizar alterações nos programas fornecidos.</p>	
 		<br>
 		<h2> 1.Introdução </h2>
 		
