--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -21,7 +21,33 @@
 
 		<br>
 		<h2> 3.Materiais e Métodos</h2>
-	
+
+		<h3>Diagrama de blocos funcional</h3>
+
+		<h3>1. Ambiente dos experimentos</h3>
+
+		<p>a) Sistema Operacional:</p>
+		<p>- Ubuntu (versão X.XX)</p>
+
+		<p>b) Equipamentos:</p>
+		<p>- Computador com webcam integrada</p>
+		<p>- Monitor de exibição</p>
+
+		<h3>2. Programas e Bibliotecas utilizadas</h3>
+
+		<p>a) Programas:</p>
+		<p>- Python (versão X.XX): Linguagem de programação utilizada para desenvolver os programas.</p>
+
+		<p>b) Bibliotecas:</p>
+		<p>- OpenCV (versão X.X.X): Biblioteca principal para manipulação de imagens e vídeos.</p>
+		<p>- NumPy (versão X.X.X): Biblioteca para operações numéricas e processamento de arrays.</p>
+		<p>- Time (versão X.X.X): Biblioteca para aumentar o tempo para tirar as fotos.</p>
+
+		<h3>2. Softwares adicionais</h3>
+
+		<p>a) Editor de Imagens:</p>
+		<p>- </p>
+
 		<br>
 		<h2> 4.Resultados e Análises</h2>
 
