--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -19,6 +19,32 @@
 		<br>
 		<h2> 2.Fundamentos Básicos</h2>
 
+		<p>Neste tópico, abordaremos os fundamentos básicos que foram utilizados durante as atividades realizadas. Esses conceitos são essenciais para compreender e explorar as funcionalidades do OpenCV, bem como realizar o processamento de imagens e vídeos.</p>
+
+		<h3>1. Processamento de Imagens e Vídeos:</h3>
+
+		<p>O processamento de imagens e vídeos refere-se às técnicas e algoritmos utilizados para modificar ou analisar esses tipos de mídia digital. O objetivo principal é extrair informações relevantes ou realizar melhorias nas imagens e vídeos, como ajuste de brilho, detecção de bordas, segmentação de objetos, entre outros.</p>
+
+		<h3>2. Biblioteca OpenCV:</h3>
+
+		<p>O OpenCV (Open Source Computer Vision Library) é uma biblioteca de código aberto amplamente utilizada para processamento de imagens e visão computacional. Ela oferece uma vasta gama de funções e algoritmos otimizados para realizar tarefas comuns nessa área, como leitura e gravação de imagens e vídeos, manipulação de pixels, detecção de objetos, entre outros.</p>
+
+		<h3>3. Leitura e Gravação de Imagens:</h3>
+
+		<p>A leitura de imagens envolve a extração dos dados contidos em um arquivo de imagem específico e sua representação na memória do computador. Já a gravação de imagens consiste em salvar uma imagem processada ou capturada em um arquivo. Essas operações são fundamentais para carregar imagens para processamento e salvar os resultados obtidos.</p>
+
+		<h3>4. Leitura e Gravação de Vídeos:</h3>
+
+		<p>A leitura de vídeos envolve a reprodução sequencial de uma sequência de imagens em alta velocidade, criando a ilusão de movimento. A gravação de vídeos, por sua vez, consiste em capturar e salvar essa sequência de imagens em um arquivo. Essas operações são utilizadas para processar e armazenar informações visuais dinâmicas.</p>
+
+		<h3>5. Manipulação de Velocidade de Exibição:</h3>
+
+		<p>A manipulação da velocidade de exibição de imagens ou vídeos está relacionada ao controle da taxa de quadros (frames per second - FPS) durante a reprodução. É possível ajustar essa taxa para aumentar ou diminuir a velocidade de exibição, resultando em uma reprodução mais rápida ou mais lenta das imagens ou vídeos.</p>
+
+		<h3>6. Interação com a Câmera:</h3>
+
+		<p>A interação com a câmera envolve a captura de imagens em tempo real por meio de dispositivos de câmera conectados ao computador. Isso permite a leitura de imagens da câmera em tempo real e a gravação de vídeos com base nessas imagens, abrindo possibilidades para aplicativos de visão computacional em tempo real.</p>
+
 		<br>
 		<h2> 3.Materiais e Métodos</h2>
 
