--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -53,7 +53,7 @@
 		<h3>1. Ambiente dos experimentos</h3>
 
 		<p>a) Sistema Operacional:</p>
-		<p>- Ubuntu (versão X.XX)</p>
+		<p>- Ubuntu (versão 20.22)</p>
 
 		<p>b) Equipamentos:</p>
 		<p>- Computador com webcam integrada</p>
@@ -65,8 +65,8 @@
 		<p>- Python (versão X.XX): Linguagem de programação utilizada para desenvolver os programas.</p>
 
 		<p>b) Bibliotecas:</p>
-		<p>- OpenCV (versão X.X.X): Biblioteca principal para manipulação de imagens e vídeos.</p>
-		<p>- NumPy (versão X.X.X): Biblioteca para operações numéricas e processamento de arrays.</p>
+		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
+		<p>- NumPy (versão 1.21.5): Biblioteca para operações numéricas e processamento de arrays.</p>
 		<p>- Time (versão X.X.X): Biblioteca para aumentar o tempo para tirar as fotos.</p>
 
 		<h3>2. Softwares adicionais</h3>
