--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -1,4 +1,10 @@
 <html>
+	<head>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+
+	</head>
+
 	<body>
 		<h1> Relatório lab 1 </h1>
 
@@ -78,6 +84,35 @@
 		<h2> 4.Resultados e Análises</h2>
 
 		<h3> Parte 2A </h3>
+		<h4> Código Original</h4>
+		<pre><code class="python">
+import numpy as np
+import cv2 as cv
+
+img = cv.imread('messi5.jpg',0)
+cv.imshow('image',img)
+k = cv.waitKey(0)
+if k == 27:         # wait for ESC key to exit
+    cv.destroyAllWindows()
+elif k == ord('s'): # wait for 's' key to save and exit
+    cv.imwrite('messigray.png',img)
+    cv.destroyAllWindows()
+		</code></pre>
+		<p> O código acima le um arquivo de imagem e o exibe na tela.Depois, espera por um input do usuário para salvar a imagem ou fechar a janela</p>
+		<p><b><br>Pergunta: Por que a janela aberta não mostra a imagem colorida?</b></p>
+		<p>A imagem é lida do arquivo através da função cv.imread(), seu segundo argumento recebe uma flag que diz como a cor do arquivo deve ser interpretada. Essa flag possui 3 valores possíveis:
+		<ul>
+			<li>cv2.IMREAD_GRAYSCALE ou 0: Carrega a imagem em escala de cinza</li>
+			<li>cv2.IMREAD_COLOR ou 1: Carrega apenas a cor da imagem, negligenciando a transparência</li>
+			<li>cv2.IMREAD_UNCHANGED ou -1: Carrega a imagem sem nenhuma modificação</li>
+		</ul> 
+		Sendo assim, podemos concluir que janela aberta não mostra a imagem colorida porque o segundo parâmetro do cv.imread() é 0.
+		Podemos corrigir esse comportamento alterando a linha correspondente no código.
+		<pre><code class="python">
+img = cv.imread('messi5.jpg',-1)
+		</code></pre>
+
+		</p>
 		<h3> Parte 2B </h3>
 		<h3> Parte 2C </h3>
 		<h3> Parte 2D </h3>
@@ -87,5 +122,10 @@
 
 		<br>
 		<h2> 5.Conclusões e Comentários Finais</h2>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+	<script>
+		hljs.highlightAll();
+	</script>
 	</body>
 </html>
