--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -270,8 +270,10 @@ fps = 30.0
 		</code></pre>
 		</p>
 
-
 		<h3> Parte 3A </h3>
+		<img src="f1.png" height="480">
+		<img src="f2.png" height="480">
+		<img src="f3.png" height="480">
 		<h3> Parte 3B </h3>
 		<h3> Parte 3C </h3>
 
