Added source code links

--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -111,7 +111,7 @@ elif k == ord('s'): # wait for 's' key to save and exit
 		<pre><code class="python">
 img = cv.imread('messi5.jpg',-1)
 		</code></pre>
-
+			<br><br><a href=https://github.com/CrakehallBoars/CrakehallBoars.github.io/blob/main/reports/report1/2A.py>Código Fonte Modificado</a>
 		</p>
 		<h3> Parte 2B </h3>
 		<h4> Código Original</h4>
@@ -155,7 +155,7 @@ cv.destroyAllWindows()
         #wait next frame by 100ms - 10fps
         time.sleep(1/10.0) 
 		</code></pre>
-               
+			<a href=https://github.com/CrakehallBoars/CrakehallBoars.github.io/blob/main/reports/report1/2B.py>Código Fonte Modificado</a>
 		<h3> Parte 2C </h3>
 		<h4> Código Original</h4>
 
@@ -213,6 +213,7 @@ cv.destroyAllWindows()
 		A segunda consiste em sempre que uma tecla for apertada, esperar 5s, capturar um frame novo da camera novamente e salva-lo em um arquivo com o código ascii da tecla apertada(idealmente converteriamos para o caractere, mas não tivemos tempo). 
 		Esse tempo extra nos permitia mover para a tela de gravação depois de apertar a tecla, que estava um pouco distante do computador. E salvar em um arquivo com o nome baseado na tecla nos permitia salvar imagens diferentes sem trabalho extra.
 
+		<br><a href=https://github.com/CrakehallBoars/CrakehallBoars.github.io/blob/main/reports/report1/2C.py>Código Fonte Modificado</a>
 
 		<h3> Parte 2D </h3>
 		<h4> Código Original</h4>
@@ -268,6 +269,7 @@ cv.destroyAllWindows()
 		<pre><code class="python">
 fps = 30.0
 		</code></pre>
+			<br><a href=https://github.com/CrakehallBoars/CrakehallBoars.github.io/blob/main/reports/report1/2D.py>Código Fonte Modificado</a>
 		</p>
 
 		<h3> Parte 3A </h3>
