--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<h2>Membros</h2>
 		<p>Leonardo Di Credico</p>
 		<p>Anthony</p>
-		<p>Fernando</p>
+		<p>Fernando Hiroaki Suzuki</p>
 		<p>Fernando</p>
 
 		<br>
