--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -68,12 +68,12 @@
 		<h3>2. Programas e Bibliotecas utilizadas</h3>
 
 		<p>a) Programas:</p>
-		<p>- Python (versão X.XX): Linguagem de programação utilizada para desenvolver os programas.</p>
+		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
 
 		<p>b) Bibliotecas:</p>
 		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
 		<p>- NumPy (versão 1.21.5): Biblioteca para operações numéricas e processamento de arrays.</p>
-		<p>- Time (versão X.X.X): Biblioteca para aumentar o tempo para tirar as fotos.</p>
+		<p>- Time: Biblioteca para aumentar o tempo para tirar as fotos.</p>
 
 		<h3>2. Softwares adicionais</h3>
 
