--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<p>Leonardo Di Credico</p>
 		<p>Anthony</p>
 		<p>Fernando Hiroaki Suzuki</p>
-		<p>Fernando</p>
+		<p>Fernando Astolfo Dos Santos</p>
 
 		<br>
 		<h2>Texto Introdutório</h2>
