--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<br>
 		<h2>Membros</h2>
 		<p>Leonardo Di Credico</p>
-		<p>Anthony</p>
+		<p>Anthony Hlebania </p>
 		<p>Fernando Hiroaki Suzuki</p>
 		<p>Fernando Astolfo Dos Santos</p>
 
