--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -281,6 +281,19 @@ fps = 30.0
 
 		<br>
 		<h2> 5.Conclusões e Comentários Finais</h2>
+			<p>
+Todos os exercícios foram interessantes de se fazer e com maneiras ainda mais interessantes de se concluir. 
+
+Por mais simples que os programas fossem sempre tentamos dar um <em>"jeitinho"</em> de deixar mais desafiador e sempre tentar ao máximo realizar as tarefas com excelência e com um pouco mais do que nos foi pedido.
+
+No primeiro exercício foi utilizado uma simples programação para simplesmente atender o que foi solicitado mas a partir do terceiro tentamos inovar e utilizar mais de nossos conhecimentos adquiridos ao longo de nossas vidas.
+
+Utilizamos vários métodos para chegarmos ao resultado de uma maneira que fosse satisfatória para o grupo, e pedindo dicas ao professor para melhorar.
+
+As tarefas foram simples, mais para o aprendizado, introdução da matéria e programação por trás de imagens e vídeos, mas com empenho nós aprendemos mais do que o exercício pedia.
+
+Como vimos, podemos alterar a qualidade da imagem (desde a cor à resolução) e dos vídeos (os FPS's e como a imagem é mostrada) e com isso desenvolver técnicas para reproduzir imagens de uma maneira diferente do original e com isso podemos progredir ainda mais em nossos estudos.
+		</p>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
