--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -293,7 +293,9 @@ Utilizamos vários métodos para chegarmos ao resultado de uma maneira que fosse
 As tarefas foram simples, mais para o aprendizado, introdução da matéria e programação por trás de imagens e vídeos, mas com empenho nós aprendemos mais do que o exercício pedia.
 
 Como vimos, podemos alterar a qualidade da imagem (desde a cor à resolução) e dos vídeos (os FPS's e como a imagem é mostrada) e com isso desenvolver técnicas para reproduzir imagens de uma maneira diferente do original e com isso podemos progredir ainda mais em nossos estudos.
-		</p>
+		
+Fernando Suzuki: o laboratório foi muito interessante porque introduziu conceitos que gosto bastante e a realização das atividades foi muito divertida. 
+			</p>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
