--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -280,7 +280,7 @@ fps = 30.0
 		<h3> Parte 3C </h3>
 
 		<br>
-		<h2> 5.Conclusões e Comentários Finais</h2>
+		<h2> 5. Conclusões e Comentários Finais</h2>
 			<p>
 Todos os exercícios foram interessantes de se fazer e com maneiras ainda mais interessantes de se concluir. 
 
@@ -295,7 +295,7 @@ As tarefas foram simples, mais para o aprendizado, introdução da matéria e pr
 Como vimos, podemos alterar a qualidade da imagem (desde a cor à resolução) e dos vídeos (os FPS's e como a imagem é mostrada) e com isso desenvolver técnicas para reproduzir imagens de uma maneira diferente do original e com isso podemos progredir ainda mais em nossos estudos.
 		
 			<p>
-Fernando Suzuki: o laboratório foi muito interessante porque introduziu conceitos que gosto bastante e a realização das atividades foi muito divertida. 
+Fernando Suzuki: "o laboratório foi muito interessante porque introduziu conceitos que gosto bastante e a realização das atividades foi muito divertida." 
 			</p>
 		
 			</p>
