--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -69,6 +69,7 @@
 
 		<p>a) Programas:</p>
 		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
+		<p>- Adobe Photoshop 2022: Programa de edição de imagem utilizado para construir a montagem dos avatares.</p>
 
 		<p>b) Bibliotecas:</p>
 		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
