--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -297,6 +297,7 @@ Como vimos, podemos alterar a qualidade da imagem (desde a cor à resolução) e
 		
 			<p>
 Fernando Suzuki: "O laboratório foi muito interessante porque introduziu conceitos que gosto bastante e a realização das atividades foi muito divertida." 
+Leonardo Di Credico: "Apesar de ter sido o primeiro laboratório, e não termos feito nada muito complexo, achei bem divertido resolver os entraves para conseguir tirar as fotos com nosso programa"
 			</p>
 		
 			</p>
