--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -278,6 +278,10 @@ fps = 30.0
 		<img src="f2.png" height="480">
 		<img src="f3.png" height="480">
 		<h3> Parte 3B </h3>
+		<video width="640" height="360" controls>
+			<source src="caminho/do/video.mp4" type="video/mp4">
+			Seu navegador não suporta o elemento de vídeo.
+		</video>
 		<h3> Parte 3C </h3>
 
 		<br>
