--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -278,11 +278,32 @@ fps = 30.0
 		<img src="f2.png" height="480">
 		<img src="f3.png" height="480">
 		<h3> Parte 3B </h3>
-		<video width="640" height="360" controls>
-			<source src="caminho/do/video.mp4" type="video/mp4">
-			Seu navegador não suporta o elemento de vídeo.
-		</video>
+		<img src="A Tropa.jpg" height="480">
 		<h3> Parte 3C </h3>
+
+		<p><b>Mudanças Lentas de Movimento</b></p>
+		<p>Movimento Humano Lento</p>
+		<video width="640" height="360" controls>
+			<source src="Movimento Humano Lento.mp4" type="video/mp4">
+			Seu navegador não suporta o elemento de vídeo.
+		  </video>
+		<p>Movimento de Objeto Lento</p>
+		<video width="640" height="360" controls>
+			<source src="Movimento Objeto Lento.mp4" type="video/mp4">
+			Seu navegador não suporta o elemento de vídeo.
+		  </video>
+
+		<p><b>Mudanças Rápidas de Movimento</b></p>
+		<p>Movimento Humano Rápido</p>
+		<video width="640" height="360" controls>
+			<source src="Movimento Humano Rapido.mp4" type="video/mp4">
+			Seu navegador não suporta o elemento de vídeo.
+		  </video>
+		<p>Movimento Objeto Rápido</p>
+		<video width="640" height="360" controls>
+			<source src="Movimento Objeto Rapido.mp4" type="video/mp4">
+			Seu navegador não suporta o elemento de vídeo.
+		  </video>
 
 		<br>
 		<h2> 5. Conclusões e Comentários Finais</h2>
