--- a/reports/report1/report1.html
+++ b/reports/report1/report1.html
@@ -320,8 +320,8 @@ As tarefas foram simples, mais para o aprendizado, introdução da matéria e pr
 
 Como vimos, podemos alterar a qualidade da imagem (desde a cor à resolução) e dos vídeos (os FPS's e como a imagem é mostrada) e com isso desenvolver técnicas para reproduzir imagens de uma maneira diferente do original e com isso podemos progredir ainda mais em nossos estudos.
 		
-			<p>
-Fernando Suzuki: "O laboratório foi muito interessante porque introduziu conceitos que gosto bastante e a realização das atividades foi muito divertida." 
+			</p>
+<p></p>Fernando Suzuki: "O laboratório foi muito interessante porque introduziu conceitos que gosto bastante e a realização das atividades foi muito divertida." 
 Leonardo Di Credico: "Apesar de ter sido o primeiro laboratório, e não termos feito nada muito complexo, achei bem divertido resolver os entraves para conseguir tirar as fotos com nosso programa"
 			</p>
 		
