--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 			<br>
 			<h2>Pasta de Relatórios</h2>
-			<a href=reports/report1/report1.html> Relatório Lab 1</a>
+			<a href=reports/report1/report1.html> Relatório Lab 1</a> <br>
+			<a href=reports/report2/report2.html> Relatório Lab 2</a> <br>
 
 
 	</body>
