--- a/reports/report2/report2.html
+++ b/reports/report2/report2.html
@@ -11,6 +11,13 @@
 		<br>
 		
 		<h2> 1.Introdução </h2>
+		<p>
+			É inevitável que imagens capturadas por camêras apresentem imperfeições na representação do mundo real. Essas imperfeições podem vir diretametne da camêra por algum problema nos circuitos ou mecanismos de captura, do meio de transporte da imagem (por exemplo perda de pacotes na rede) 
+			ou no armazenamento (se armazenadas em um disco mecânico por exemplo, algum fator externo pode corromper os dados armazenados).
+			Este relatório foca em técnicas para mitigar uma forma especifíca de imperfeição, os rúidos. A solução apresentada é baseada em filtros.
+		</p>
+
+		<p>Ao longo deste relatório, serão apresentados os programas elaborados pela equipe para cada etapa, descrevendo as alterações realizadas e as soluções adotadas.</p>
 		<h2> 2.Fundamentos Básicos</h2>
 		<h3>1. Ambiente dos experimentos</h3>
 
