--- a/reports/report2/report2.html
+++ b/reports/report2/report2.html
@@ -75,11 +75,11 @@
 			<h3>Blurred</h3>
 			<img src="f1_blurred.png" height="480">
 			<h3>Median Blurring</h3>
-			<img src="f1_median_blurring" height="480">
+			<img src="f1_median_blurring.png" height="480">
 			<h3>Gaussian Blurring</h3>
-			<img src="f1_gaussian_blurring" height="480">
+			<img src="f1_gaussian_blurring.png" height="480">
 			<h3>Bilateral Filtering</h3>
-			<img src="f1_bilateral_filtering" height="480">
+			<img src="f1_bilateral_filtering.png" height="480">
 		</p>
 		<h2> 5. Conclusões e Comentários Finais</h2>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
