--- a/reports/report2/report2.html
+++ b/reports/report2/report2.html
@@ -82,6 +82,12 @@
 			<img src="f2_bilateral_filtering.png" height="480">
 		</p>
 		<h2> 5. Conclusões e Comentários Finais</h2>
+
+		<p>Através dessa prática, foi possível compreender a importância da filtragem de imagens na melhoria da qualidade visual e remoção de ruídos indesejados. Cada filtro apresentou suas características específicas e pôde ser aplicado de acordo com as necessidades do processamento de imagem.</p>
+
+		<p>No geral, a filtragem de imagens é uma etapa essencial em diversas aplicações de visão computacional, como reconhecimento de padrões, detecção de objetos e processamento de imagens médicas. Os experimentos realizados neste laboratório proporcionaram um maior entendimento teórico e prático sobre os diferentes métodos de filtragem disponíveis na biblioteca OpenCV.</p>
+
+		<p>Com base nos resultados obtidos, conclui-se que a escolha do filtro de imagem a ser aplicado depende do contexto e das características específicas da imagem de entrada. Cabe ao desenvolvedor avaliar essas características e selecionar a técnica de filtragem mais adequada para alcançar os melhores resultados visuais e remover o ruído de forma eficiente.</p>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
 		hljs.highlightAll();
