--- a/reports/report2/report2.html
+++ b/reports/report2/report2.html
@@ -72,14 +72,26 @@
 		<br>
 		<h2> 4.Resultados e Análises</h2>
 		<p>
-			<h3>Blurred</h3>
+			<h3>Resultados aplicados nas imagens capturadas no Lab 1</h3>
+			<h4>Blurred</h3>
 			<img src="f2_blurred.png" height="480">
-			<h3>Median Blurring</h3>
+			<h4>Median Blurring</h4>
 			<img src="f2_median_blurring.png" height="480">
-			<h3>Gaussian Blurring</h3>
+			<h4>Gaussian Blurring</h4>
 			<img src="f2_gaussian_blurring.png" height="480">
-			<h3>Bilateral Filtering</h3>
+			<h4>Bilateral Filtering</h4>
 			<img src="f2_bilateral_filtering.png" height="480">
+
+			<h3>Resultados obtidos diretamente da webcam</h3>
+
+			<h4>Webcam Blurred</h4>
+			<img src="webcam_blurred.png" height="480">
+			<h4>Webcam Median Blurred</h4>
+			<img src="webcam_median_blurred.png" height="480">
+			<h4>Webcam Gaussian Blurred</h4>
+			<img src="webcam_gaussian_blurred.png" height="480">
+			<h4>Webcam Bilateral</h4>
+			<img src="webcam_bilateral_filtered.png" height="480">
 		</p>
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
