--- a/reports/report2/report2.html
+++ b/reports/report2/report2.html
@@ -66,8 +66,263 @@
 		<h3>2. Softwares adicionais</h3>
 		<p>- Adobe Photoshop 2022: Programa de edição de imagem utilizado para construir a montagem dos avatares.</p>
 
-		<p>a) Editor de Imagens:</p>
-		<p>- </p>
+		<h3>3. Código Fonte</h3>
+		<h4>Parte 1 - Aplicação dos filtros em imagens</h4>
+		<p>
+			Filtro Média
+			<pre><code class="python">
+import cv2 as cv
+import numpy as np
+from matplotlib import pyplot as plt
+img = cv.imread('f1.png')
+img = cv.cvtColor(img, cv.COLOR_BGR2RGB)
+assert img is not None, "file could not be read, check with os.path.exists()"
+blur = cv.blur(img,(5,5))
+plt.subplot(121),plt.imshow(img),plt.title('Original')
+plt.xticks([]), plt.yticks([])
+plt.subplot(122),plt.imshow(blur),plt.title('Blurred')
+plt.xticks([]), plt.yticks([])
+plt.show()
+			</code></pre>		
+			Filtro Mediana
+			<pre><code class="python">
+import cv2 as cv
+import numpy as np
+from matplotlib import pyplot as plt
+img = cv.imread('f1.png')
+img = cv.cvtColor(img, cv.COLOR_BGR2RGB)
+assert img is not None, "file could not be read, check with os.path.exists()"
+blur = cv.GaussianBlur(img,(5,5),0)
+plt.subplot(121),plt.imshow(img),plt.title('Original')
+plt.xticks([]), plt.yticks([])
+plt.subplot(122),plt.imshow(blur),plt.title('Gaussian Blurred')
+plt.xticks([]), plt.yticks([])
+plt.show()
+			</code></pre>	
+			Filtro Gaussiano
+			<pre><code class="python">
+import cv2 as cv
+import numpy as np
+from matplotlib import pyplot as plt
+img = cv.imread('f1.png')
+img = cv.cvtColor(img, cv.COLOR_BGR2RGB)
+assert img is not None, "file could not be read, check with os.path.exists()"
+median = cv.medianBlur(img,5)
+plt.subplot(121),plt.imshow(img),plt.title('Original')
+plt.xticks([]), plt.yticks([])
+plt.subplot(122),plt.imshow(median),plt.title('Median')
+plt.xticks([]), plt.yticks([])
+plt.show()
+			</code></pre>	
+			Filtro Bilateral
+			<pre><code class="python">
+import cv2 as cv
+import numpy as np
+from matplotlib import pyplot as plt
+img = cv.imread('f1.png')
+img = cv.cvtColor(img, cv.COLOR_BGR2RGB)
+assert img is not None, "file could not be read, check with os.path.exists()"
+blur = cv.bilateralFilter(img,9,75,75)
+plt.subplot(121),plt.imshow(img),plt.title('Original')
+plt.xticks([]), plt.yticks([])
+plt.subplot(122),plt.imshow(blur),plt.title('Bilateral Filtering')
+plt.xticks([]), plt.yticks([])
+plt.show()
+			</code></pre>	
+		</p>
+		
+		<h4>Parte 2 - Aplicação dos filtros na entrada da câmera</h4>
+		<p>
+			Filtro Média
+			<pre><code class="python">
+import numpy as np
+import cv2 as cv
+import time
+
+cap = cv.VideoCapture(0)
+
+if not cap.isOpened():
+    print("Cannot open camera")
+    exit()
+
+while True:
+    # Capture frame-by-frame
+    ret, frame = cap.read()
+    # if frame is read correctly ret is True
+    if not ret:
+        print("Can't receive frame (stream end?). Exiting ...")
+        break
+
+    # Apply filter to the frame
+    blur = cv.blur(frame, (5, 5))
+
+    # Display the resulting frame
+    cv.imshow('frame', blur)
+
+    key = cv.waitKey(1)
+    if key == ord('q'):
+        break
+    if(key != -1):
+        time.sleep(1)
+        ret, frame = cap.read()
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.blur(frame, (5, 5))
+        cv.imwrite(f"fotos/{key}.png", blur_frame)
+
+    ### Salva o frame atual gravado na camera no arquivo
+    if (key == ord('x')):
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.blur(frame, (5, 5))
+        cv.imwrite("Foto.png", blur_frame)
+    ###
+
+# When everything done, release the capture
+cap.release()
+cv.destroyAllWindows()
+			</code></pre>		
+			Filtro Mediana
+			<pre><code class="python">
+mport numpy as np
+import cv2 as cv
+import time
+
+cap = cv.VideoCapture(0)
+
+if not cap.isOpened():
+    print("Cannot open camera")
+    exit()
+
+while True:
+    # Capture frame-by-frame
+    ret, frame = cap.read()
+    # if frame is read correctly ret is True
+    if not ret:
+        print("Can't receive frame (stream end?). Exiting ...")
+        break
+
+    # Apply filter to the frame
+    blur = cv.medianBlur(frame,5)
+
+    # Display the resulting frame
+    cv.imshow('frame', blur)
+
+    key = cv.waitKey(1)
+    if key == ord('q'):
+        break
+    if(key != -1):
+        time.sleep(1)
+        ret, frame = cap.read()
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.medianBlur(frame,5)
+        cv.imwrite(f"fotos/{key}.png", blur_frame)
+
+    ### Salva o frame atual gravado na camera no arquivo
+    if (key == ord('x')):
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.medianBlur(frame,5)
+        cv.imwrite("Foto.png", blur_frame)
+    ###
+
+# When everything done, release the capture
+cap.release()
+cv.destroyAllWindows()
+			</code></pre>	
+			Filtro Gaussiano
+			<pre><code class="python">
+import numpy as np
+import cv2 as cv
+import time
+
+cap = cv.VideoCapture(0)
+
+if not cap.isOpened():
+    print("Cannot open camera")
+    exit()
+
+while True:
+    # Capture frame-by-frame
+    ret, frame = cap.read()
+    # if frame is read correctly ret is True
+    if not ret:
+        print("Can't receive frame (stream end?). Exiting ...")
+        break
+
+    # Apply filter to the frame
+    blur = cv.GaussianBlur(frame, (5, 5),0)
+
+    # Display the resulting frame
+    cv.imshow('frame', blur)
+
+    key = cv.waitKey(1)
+    if key == ord('q'):
+        break
+    if(key != -1):
+        time.sleep(1)
+        ret, frame = cap.read()
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.GaussianBlur(frame, (5, 5),0)
+        cv.imwrite(f"fotos/{key}.png", blur_frame)
+
+    ### Salva o frame atual gravado na camera no arquivo
+    if (key == ord('x')):
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.GaussianBlur(frame, (5, 5),0)
+        cv.imwrite("Foto.png", blur_frame)
+    ###
+
+# When everything done, release the capture
+cap.release()
+cv.destroyAllWindows()
+			</code></pre>	
+			Filtro Bilateral
+			<pre><code class="python">
+import numpy as np
+import cv2 as cv
+import time
+
+cap = cv.VideoCapture(0)
+
+if not cap.isOpened():
+    print("Cannot open camera")
+    exit()
+
+while True:
+    # Capture frame-by-frame
+    ret, frame = cap.read()
+    # if frame is read correctly ret is True
+    if not ret:
+        print("Can't receive frame (stream end?). Exiting ...")
+        break
+
+    # Apply filter to the frame
+    blur = cv.bilateralFilter(frame,9,75,75)
+
+    # Display the resulting frame
+    cv.imshow('frame', blur)
+
+    key = cv.waitKey(1)
+    if key == ord('q'):
+        break
+    if(key != -1):
+        time.sleep(1)
+        ret, frame = cap.read()
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.bilateralFilter(frame,9,75,75)
+        cv.imwrite(f"fotos/{key}.png", blur_frame)
+
+    ### Salva o frame atual gravado na camera no arquivo
+    if (key == ord('x')):
+        # Apply filter to the captured frame and save it
+        blur_frame = cv.bilateralFilter(frame,9,75,75)
+        cv.imwrite("Foto.png", blur_frame)
+    ###
+
+# When everything done, release the capture
+cap.release()
+cv.destroyAllWindows()
+			</code></pre>	
+		</p>
+		
 
 		<br>
 		<h2> 4.Resultados e Análises</h2>
