--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<h2>Pasta de Relatórios</h2>
 			<a href=reports/report1/report1.html> Relatório Lab 1</a> <br>
 			<a href=reports/report2/report2.html> Relatório Lab 2</a> <br>
+			<a href=reports/report3/report3.html> Relatório Lab 3</a> <br>
+
 
 
 	</body>
