--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -8,7 +8,15 @@
 	<body>
 		<h1> Relatório lab 3 </h1>
 
-		<br>
+		<h2> Grupo </h2>
+
+		<p>Leonardo Di Credico
+
+		Anthony Hlebania
+
+		Fernando Hiroaki Suzuki
+
+		Fernando Astolfo Dos Santos</p>
 		
 		<h2> 1.Introdução </h2>
 
