--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -10,17 +10,29 @@
 
 		<h2> Grupo </h2>
 
-		<p>Leonardo Di Credico
+		<p>Leonardo Di Credico </p>
 
-		Anthony Hlebania
+		<p>Anthony Hlebania</p>
 
-		Fernando Hiroaki Suzuki
+		<p>Fernando Hiroaki Suzuki</p>
 
-		Fernando Astolfo Dos Santos</p>
+		<p>Fernando Astolfo Dos Santos</p>
 		
 		<h2> 1.Introdução </h2>
 
+		<p>Neste relatório, descreveremos as atividades realizadas no laboratório da disciplina de Processamento de Vídeo. O objetivo deste laboratório foi estudar a teoria de conversão de cores e aplicar 
+		esse conhecimento na prática, utilizando a biblioteca OpenCV. Além disso, foram realizadas modificações em um programa existente para realizar o rastreamento de cores e aplicar filtros para 
+		melhorar a visualização dos resultados. Por fim, foi proposto um exercício em equipe para extrair múltiplos objetos coloridos simultaneamente.</p>
+
 		<h2> 2.Fundamentos Básicos</h2>
+
+		<p>Uma das principais áreas da fundamentação teórica abordada no laboratório é a teoria de conversão de cores. O processamento de vídeo frequentemente envolve a manipulação e análise de imagens 
+		em diferentes espaços de cores, como RGB (Red, Green, Blue) e HSV (Hue, Saturation, Value). Compreender os fundamentos desses espaços de cores, suas características e como as conversões 
+		entre eles são realizadas é essencial para realizar operações de processamento de vídeo de forma eficiente. </p>
+
+		<p>Ao estudar a teoria de conversão de cores, é importante compreender os componentes que compõem cada espaço de cores e como eles afetam a representação visual de uma imagem. Por exemplo, no espaço 
+		RGB, cada pixel é representado por três componentes: vermelho, verde e azul. Já no espaço HSV, o pixel é representado pelo matiz (hue), saturação (saturation) e valor (value). Compreender as 
+		relações entre esses componentes e como eles são mapeados para a representação visual de uma imagem é crucial para o processamento e análise posterior.</p>
 
 		<h2> 3.Materiais e Métodos</h2>
 		
