--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -35,6 +35,27 @@
 		relações entre esses componentes e como eles são mapeados para a representação visual de uma imagem é crucial para o processamento e análise posterior.</p>
 
 		<h2> 3.Materiais e Métodos</h2>
+
+		<h3>1. Ambiente dos experimentos</h3>
+
+		<p>a) Sistema Operacional:</p>
+		<p>- Ubuntu (versão 20.22)</p>
+
+		<p>b) Equipamentos:</p>
+		<p>- Computador com webcam integrada</p>
+		<p>- Monitor de exibição</p>
+
+		<h3>2. Programas e Bibliotecas utilizadas</h3>
+
+		<p>a) Programas:</p>
+		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
+
+		<p>b) Bibliotecas:</p>
+		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
+		<p>- NumPy (versão 1.21.5): Biblioteca para operações numéricas e processamento de arrays.</p>
+		<p>- Time: Biblioteca para aumentar o tempo para tirar as fotos.</p>
+
+		<h3>3. Código Fonte</h3>
 		
 		<h2> 4.Resultados e Análises</h2>
 		
