--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -61,6 +61,12 @@
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
+		<p>Este laboratório de Processamento de Vídeo proporcionou uma oportunidade de aprofundar o conhecimento teórico e prático sobre a conversão de cores, aplicação de filtros e técnicas de processamento 
+		de imagem e vídeo. Através da utilização de materiais como o computador, a biblioteca OpenCV e a webcam, foi possível desenvolver e executar experimentos práticos, obtendo resultados 
+		satisfatórios. O estudo teórico e a aplicação prática dos conceitos permitiram compreender a importância das conversões de cores, rastreamento de objetos e aplicação de filtros para melhorar 
+		a qualidade visual das imagens resultantes. O laboratório contribuiu para a formação de uma base sólida no processamento de vídeo, capacitando os participantes a aplicar esses conhecimentos 
+		em uma variedade de contextos práticos.</p>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
 		hljs.highlightAll();
