--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -142,6 +142,12 @@ while True:
 cap.release()
 cv.destroyAllWindows()
 			</code></pre>	
+
+			<p>
+				O Código acima, salva as imagens das 3 etapas do reconhecimento de objetos em 3 arquivos ao se apertar a tecla Q, o nome do arquivo
+				é incrementado com base em um contador, de forma a ser possível salvar múltiplas imagens em apenas uma execução do programa.
+				EXPLICAR SISTEMA DE TARGET COLOR
+			</p>
 		
 			<h4> Aplicação de filtros e gravação de vídeo </h4>
 			<pre><code class="python">
