--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -67,7 +67,7 @@
 			e coloca todos os pixels que se encontram nesse intervalo em uma máscara,
 			posteriormente, usando essa mascará ele cria uma imagem nova tirando todos os pixels que não estejam na mascara,
 			dessa forma acabamos com uma imagem final com apenas os pixels dentro do intervalo definido.
-			Esse procedimnto pode ser usado para extrair um objeto de uma imagem, considerando que ele esteja em um intervalo bem definido e contrastado dentro da imagem. 
+			Esse procedimento pode ser usado para extrair um objeto de uma imagem, considerando que ele esteja em um intervalo bem definido e contrastado dentro da imagem. 
 
 		<figure>
     			<img src='media/Raw.png' />
