--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -79,7 +79,7 @@
 		</figure>
 		<figure>
     			<img src='media/Final.png' />
-    			<figcaption>Máscara aplicada na imagem origianl, extraindo objetos azuiz</figcaption>
+    			<figcaption>Máscara aplicada na imagem origianl, extraindo objetos azuis</figcaption>
 		</figure>
 		
 		</p>
@@ -329,6 +329,30 @@ cv.destroyAllWindows()
 			em arquivos .avi desde o começo do programa até que o usuário aperte <em>s</em> para finalizar os vídeos e salvar os frames atuais. </p>
 		
 		<h2> 4.Resultados e Análises</h2>
+
+		<h3> Imagens da extração de objetos vermelhos, azuis e verdes simultaneamente.</h3>
+
+		<figure>
+    			<img src='media/webcam_image_0.jpg' />
+			<figcaption>Original</figcaption>
+		</figure>
+
+		<figure>
+    			<img src='media/result_image_red0.jpg' />
+			<figcaption>Extração de objetos vermelhos</figcaption>
+		</figure>
+
+		<figure>
+    			<img src='media/result_image_blue0.jpg' />
+			<figcaption>Extração de objetos azuis</figcaption>
+		</figure>
+
+		<figure>
+    			<img src='media/result_image_green0.jpg' />
+			<figcaption>Extração de objetos verdes</figcaption>
+		</figure>
+
+		<h3> Vídeo da extração de objetos azuis e aplicação de filtros
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
