--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -54,6 +54,7 @@
 
 		<p>a) Programas:</p>
 		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
+		<p>- CapCut: Programa de edição de vídeo utilizado para fazer a união de todos os vídeos com suas respectivas legendas. 
 
 		<p>b) Bibliotecas:</p>
 		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
