--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -80,7 +80,7 @@
 		</figure>
 		<figure>
     			<img src='media/Final.png' />
-    			<figcaption>Máscara aplicada na imagem origianl, extraindo objetos azuis</figcaption>
+    			<figcaption>Máscara aplicada na imagem original, extraindo objetos azuis</figcaption>
 		</figure>
 		
 		</p>
@@ -354,6 +354,9 @@ cv.destroyAllWindows()
 		</figure>
 
 		<h3> Vídeo da extração de objetos azuis e aplicação de filtros
+
+		<p>Acima temos o vídeo da imagem original (direita superior), do objeto azul sendo reconhecido (esquerda superior) 
+			e do objeto filtrado depois de reconhecido (centro inferior) </p>
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
