--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -353,7 +353,7 @@ cv.destroyAllWindows()
 			<figcaption>Extração de objetos verdes</figcaption>
 		</figure>
 
-		<h3> Vídeo da extração de objetos azuis e aplicação de filtros
+		<h3> Vídeo da extração de objetos azuis e aplicação de filtros </h3>
 
 		<p>Acima temos o vídeo da imagem original (direita superior), do objeto azul sendo reconhecido (esquerda superior) 
 			e do objeto filtrado depois de reconhecido (centro inferior) </p>
