--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -355,6 +355,10 @@ cv.destroyAllWindows()
 		</figure>
 
 		<h3> Vídeo da extração de objetos azuis e aplicação de filtros </h3>
+		<video width="640" height="360" controls>
+			<source src="media/filtros.mp4" type="video/mp4">
+			Seu navegador não suporta o elemento de vídeo.
+		  </video>
 
 		<p>Acima temos o vídeo da imagem original (direita superior), do objeto azul sendo reconhecido (esquerda superior) 
 			e do objeto filtrado depois de reconhecido (centro inferior) </p>
