--- a/reports/report3/report3.html
+++ b/reports/report3/report3.html
@@ -55,7 +55,7 @@
 		<p>a) Programas:</p>
 		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
 		<p>- CapCut: Software de edição de vídeo utilizado para fazer a união de todos os vídeos em um só com suas respectivas legendas.</p>
-		<p>- HandBrake: Software de compressão de vídeo utilizado para diminuir o tamanho do vídeo para o tamanho suportado pelo GitHub. </p>
+		<p>- HandBrake: Software de compressão de vídeo utilizado para diminuir o tamanho do arquivo de vídeo para o tamanho suportado pelo GitHub. </p>
 
 		<p>b) Bibliotecas:</p>
 		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
