Added application context

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 			<p>Em desenvolvimento</p>
 
 			<br>
-			<h2>Pasta de Trabalhos</h2>
-			<p>Em desenvolvimento</p>
+			<h2>Pasta do Projeto</h2>
+			<a href=project/application_context.html> Contexto</a> <br>
+			
 
 			<br>
 			<h2>Pasta de Relatórios</h2>
